# Django_ORM

./: .gitignore  README.md  pyproject.toml  requirements.txt
myapp3/: models.py  urls.py  views.py
myapp3/migrations/: 0001_initial.py
myapp3/templates/myapp3/: author_posts.html  base.html  my_template.html  templ_for.html  templ_if.html
myapp4/: forms.py  models.py  urls.py  views.py
myapp4/migrations/: 0001_initial.py
myapp5/: admin.py  models.py
recipes_of_dishes/: settings.py  urls.py
recipes_of_dishes/myapp/: views.py
recipes_of_dishes/myapp3/management/commands/: fill_db.py
recipes_of_dishes/myapp3/templates/myapp3/: about.html  index.html
recipes_of_dishes/myapp4/templates/myapp4/: many_fields_form.html  upload_image.html  user_form.html
recipes_of_dishes/myapp5/migrations/: 0001_initial.py  0002_product_date_added_product_description_product_price_and_more.py
recipes_of_dishes/myapp6/: urls.py  views.py
recipes_of_dishes/myapp6/management/commands/: make_products.py
recipes_of_dishes/recipes_of_dishes/: settings.py  urls.py
recipes_of_dishes/templates/: base.html
